--- a/05-09 homework/index.html
+++ b/05-09 homework/index.html
@@ -7,6 +7,27 @@
 	<title>Homework #1</title>
 </head>
 <body>
-	
+	<h2>Перелік основних GIT команд</h2>
+	<ul>
+		<li><b>git config --global user.name blabla</b> - user name</li>
+		<li><b>git config --global user.email blabal@bla</b> - user email</li>
+		<li><b>git init</b> - create an empty Git repository or reinitialize an existing one </li>
+		<li><b>git status</b> - show the working tree status</li>
+		<li><b>git add</b> - add file contents to the index</li>
+		<li><b>git commit</b> - record changes to the repository</li>
+		<li><b>git log</b> - show commit logs</li>
+		<li><b>git checkout</b> - switch branches or restore working tree files</li>
+		<li><b>git branch</b> - list, create, or delete branches</li>
+		<li><b>git push</b> - update remote refs along with associated objects</li>
+		<li><b>git pull</b> - fetch from and integrate with another repository or a local branch</li>
+		<li><b>git merge</b> - join two or more development histories together</li>
+		<li><b>git clone</b> - clone a repository into a new directory</li>
+		<li><b>git revert</b> - revert some existing commits</li>
+		<li><b>git reset</b> - reset current HEAD to the specified state</li>
+		<li><b>git rebase</b> - reapply commits on top of another base tip</li>
+		<li><b>git cherry-pick</b> - apply the changes introduced by some existing commits</li>
+		<li><b>git stash</b> - stash the changes in a dirty working directory away</li>
+	</ul>
+	<p>A . gitignore file is a text file placed in your git repository that tells git not to track certain files and folders that you don't want being uploaded to your master repository. </p>
 </body>
 </html>
