--- a/HW-4-Block-layout/index.html
+++ b/HW-4-Block-layout/index.html
@@ -55,7 +55,7 @@
 					</div>
 					<div class="service">
 						<select name="services" class="service-button">
-							<option label="Select Service" value="1">Select Service</option>
+							<option label="Select Service" value="1" class="selected">Select Service</option>
 							<option label="Overview">Overview</option>
 							<option label="Features">Features</option>
 							<option label="Technology"> Technology</option>
