--- a/HW-14-Optimization/prod/index.html
+++ b/HW-14-Optimization/prod/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -241,7 +241,7 @@
         </div>
     </div>
 </section>
-<seciton class="last-screen">
+<div class="last-screen">
     <div class="wrapper">
         <h2 class="h2">закажите свой видеопарктроник <span class="yellow">до конца дня</span>
             И <span class="yellow">получите в подарок</span> антибликовое стекло</h2>
@@ -263,7 +263,7 @@
             </form>
         </div>
     </div>
-</seciton>
+</div>
 <footer>
     <div class="wrapper">
 
