--- a/HW-14-Optimization/prod/index.html
+++ b/HW-14-Optimization/prod/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="css/screen.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -269,8 +270,8 @@
 
     </div>
 </footer>
-<script src="lib/plugins.js"></script>
-<script>
+<script src="lib/plugins.js" defer></script>
+<script defer>
     // 2. This code loads the IFrame Player API code asynchronously.
     var tag = document.createElement('script');
 
