--- a/HW-14-Optimization/prod/index.html
+++ b/HW-14-Optimization/prod/index.html
@@ -169,10 +169,10 @@
 <section class="reviews">
     <div class="wrapper">
         <h2 class="h2">отзывы о нашем <span class="yellow">видеопарктронике</span></h2>
-        <img src="img/arrow-left.png" alt="" class="arrow-left">
+        <img data-src="img/arrow-left.png" alt="" class="arrow-left lazyload">
         <div class="review-slider">
             <div class="slide">
-                <img src="img/review1.webp" alt="" class="main-review-img">
+                <img data-src="img/review1.webp" alt="" class="main-review-img lazyload">
                 <p class="review-text">
                     Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких устройств что у них либо
                     дизайн
@@ -188,11 +188,11 @@
                     зеркало
                     любой машины, вообщем то что доктор прописал!
                 </p>
-                <div class="review-author"><img src="img/review1-ava.webp" alt="" class="ava"><b>Константин</b><i>г.
+                <div class="review-author"><img data-src="img/review1-ava.webp" alt="" class="ava lazyload"><b>Константин</b><i>г.
                     Днепропетровск</i></div>
             </div>
         </div>
-        <img src="img/arrow-right.png" alt="" class="arrow-right">
+        <img data-src="img/arrow-right.png" alt="" class="arrow-right lazyload">
     </div>
 </section>
 <section class="delivery">
@@ -206,13 +206,13 @@
         </ul>
         <p>Мы заботимся о своей репутации, клиенты для нас на первом месте!</p>
         <div class="advantages">
-            <div class="adv"><img src="img/reason.png" alt="" class="bg-adv1">
+            <div class="adv"><img data-src="img/reason.png" alt="" class="bg-adv1 lazyload">
                 <div class="adv-title yellow">Оплата при получении</div>
             </div>
-            <div class="adv"><img src="img/reason.png" alt="" class="bg-adv2">
+            <div class="adv"><img data-src="img/reason.png" alt="" class="bg-adv2 lazyload">
                 <div class="adv-title yellow">365 дней гарантии</div>
             </div>
-            <div class="adv"><img src="img/reason.png" alt="" class="bg-adv3">
+            <div class="adv"><img data-src="img/reason.png" alt="" class="bg-adv3 lazyload">
                 <div class="adv-title yellow">Возврат денег в течение 14 дней</div>
             </div>
         </div>
@@ -247,9 +247,9 @@
         <h2 class="h2">закажите свой видеопарктроник <span class="yellow">до конца дня</span>
             И <span class="yellow">получите в подарок</span> антибликовое стекло</h2>
         <div class="left-block">
-            <img src="img/product-reverse.webp" alt="">
+            <img data-src="img/product-reverse.webp" class="lazyload" alt="">
             <span class="plus">+</span>
-            <img src="img/gift-reverse.webp" alt="">
+            <img data-src="img/gift-reverse.webp" class="lazyload" alt="">
             <div class="price">
                 <div class="old-price">6999 грн.</div>
                 <div class="new-price">3999 грн.</div>
@@ -270,6 +270,7 @@
 
     </div>
 </footer>
+<script src="./js/lazysizes.min.js" async></script>
 <script defer>
     // 2. This code loads the IFrame Player API code asynchronously.
     var tag = document.createElement('script');
