--- a/HW-14-Optimization/prod/index.html
+++ b/HW-14-Optimization/prod/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="preload" href="./css/fonts.css" as="font">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="css/screen.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="./css/sprite.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
 <header>
     <div class="wrapper">
+        <script src="./js/spinner.js" defer></script>
+        <div class="loader" id="loader">
+            <div class="loader_inner" id="loader_inner"></div>
+        </div>
         <img src="img/logo.png" alt="Logo Avtoparktronik" class="logo">
         <div class="right-block">
             <a href="tel:+380500704843" class="phone">+38 050 070 48 43</a>
@@ -167,10 +173,35 @@
         <button class="btn-order centred">Заказать</button>
     </div>
 </section>
-<section class="reviews">
-    <div class="wrapper">
+<section class="reviews single-item">
+    <div class="wrapper slide">
         <h2 class="h2">отзывы о нашем <span class="yellow">видеопарктронике</span></h2>
-        <img src="img/arrow-left.png" alt="" class="arrow-left">
+        <div class="review-slider">
+            <div class="slide">
+                <img src="img/review1.webp" alt="" class="main-review-img">
+                <p class="review-text">
+                    Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких устройств что у них либо
+                    дизайн
+                    уродский огромный — в полтора раза больше штатного, а я вообще не люблю заднее зеркало, так как за 3
+                    года
+                    вождения рабочих "каблучков" типа Кангу и Берлинго вообще привык без него обходится, либо тех.
+                    данные
+                    никакие — камеры очень плохого качества… Уже думал что печаль… :( Но вот за пару дней поисков
+                    наткнулся на
+                    то о чем мечтал действительно — HD Recorder. Нашел его у одного из драйвечан, и у других. Все в
+                    восторге от
+                    данного устройства. Качество видео очень хорошее, в машине не видно его вообще, крепления на штатное
+                    зеркало
+                    любой машины, вообщем то что доктор прописал!
+                </p>
+                <div class="review-author">
+                    <img src="img/review1-ava.webp" alt="" class="ava"><b>Константин</b><i>г.
+                    Днепропетровск</i></div>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper slide">
+        <h2 class="h2">отзывы о нашем <span class="yellow">видеопарктронике</span></h2>
         <div class="review-slider">
             <div class="slide">
                 <img src="img/review1.webp" alt="" class="main-review-img">
@@ -193,7 +224,6 @@
                     Днепропетровск</i></div>
             </div>
         </div>
-        <img src="img/arrow-right.png" alt="" class="arrow-right">
     </div>
 </section>
 <section class="delivery">
@@ -313,5 +343,9 @@
         player.stopVideo();
     }
 </script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+<script src="./js/slider.js"></script>
 </body>
 </html>
