--- a/HW-14-Optimization/prod/index.html
+++ b/HW-14-Optimization/prod/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/screen.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="./css/sprite.css">
+    <link rel="preload" href="./css/sprite.css" as="style">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
